refactoring: deleted country, csvToPerson